Added and fix search function to Locations.
